--- a/metcrm.html
+++ b/metcrm.html
@@ -1,3 +1,5 @@
 <head>
   <title>metcrm</title>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/css/select2.min.css" rel="stylesheet" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/js/select2.min.js"></script>
 </head>
